--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,9 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="player-board"></div>
+    <div class="computer-board"></div>
+  </div>
 </body>
 </html>
