--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <div class="container">
-    <div class="player-board"></div>
-    <div class="computer-board"></div>
+    <div class="boards">
+      <div class="player-board"></div>
+      <div class="computer-board"></div>
+    </div>
+    <div class="message-log"></div>
   </div>
 </body>
 </html>
