--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
         <div class="computer-board"></div>
       </div>
     </div>
-    <div class="message-log">Awaiting...</div>
+    <div class="message-log"><p>Awaiting...</p></div>
   </div>
 </body>
 </html>
